--- a/client/css/style.css
+++ b/client/css/style.css
@@ -4,6 +4,12 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.navbar {
+  -webkit-box-shadow: 0 5px 3px -3px #777;
+  -moz-box-shadow: 0 5px 3px -3px #777;
+  box-shadow: 0 5px 3px -3px #777;
+}
+
 h3 {
   font-weight: 600;
   color: rgba(85, 239, 196, 1);
@@ -14,7 +20,7 @@ h3 {
   background: transparent;
 }
 
-.card::after {
+#card-login-page::after {
   content: "";
   width: 100%;
   height: 100%;
@@ -27,10 +33,10 @@ h3 {
 input[type="email"],
 input[type="password"],
 input[type="text"] {
-  border-radius: 50px;
-  border-color: rgba(85, 239, 196, 1);
+  border: none;
   width: 40%;
   transition: 0.5s;
+  border-bottom: 1px solid rgba(85, 239, 196, 1);
 }
 
 button {
@@ -51,18 +57,6 @@ button {
     rgba(129, 236, 236, 1),
     rgba(85, 239, 196, 1)
   );
-}
-
-.btn-login::before {
-  content: "";
-  width: 140px;
-  height: 30px;
-  margin-top: 10px;
-  margin-left: -40px;
-  position: absolute;
-  background-color: grey;
-  z-index: -1;
-  filter: blur(10px);
 }
 
 #card-tasks {
