--- a/client/style.css
+++ b/client/style.css
@@ -10,7 +10,7 @@
 
 #login-box{
     background: white ; 
-    padding: 20px;
+    padding: 1.4%;
     opacity: 0.8; 
     border-radius: 8px; 
     box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65); 
@@ -63,4 +63,36 @@
 #task {
     width: 14rem; 
     margin-top: 12px;
+}
+
+#add-form {
+    background: white ; 
+    margin: 80px auto;
+    padding: 30px;
+    opacity: 0.8; 
+    border-radius: 8px; 
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65); 
+    height: 80vh; 
+    width: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+#edit-form {
+    background: white ; 
+    margin: 80px auto;
+    padding: 30px;
+    opacity: 0.8; 
+    border-radius: 8px; 
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65); 
+    height: 80vh; 
+    width: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: center;
 }
