--- a/client/css/style.css
+++ b/client/css/style.css
@@ -73,6 +73,17 @@ button {
   border-radius: 10px;
 }
 
+#form-edit-task {
+  position: absolute;
+  z-index: 1;
+  top: -40px;
+  left: 0;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  border: 2px solid rgba(85, 239, 196, 1);
+}
+
 .fade-enter-active,
 .fade-leave-active {
   transition: opacity 0.7s;
