--- a/template/style.css
+++ b/template/style.css
@@ -28,7 +28,6 @@ body {
     background: -ms-linear-gradient(top, rgba(30,80,128,1) 0%, rgba(8,39,245,1) 13%, rgba(4,14,209,1) 100%);
     background: linear-gradient(to bottom, rgba(30,80,128,1) 0%, rgba(8,39,245,1) 13%, rgba(4,14,209,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5080', endColorstr='#040ed1', GradientType=0 );
-    z-index: 5;
 }
 
 #button-start:hover {
@@ -54,8 +53,7 @@ body {
 }
 
 .scroll {
-    overflow: auto;
-    max-height: 630px;
+    overflow: auto
 }
 
 .wallpaperdolphin {
@@ -102,41 +100,6 @@ body {
 }
 
 #register {
-    z-index: 10;
-    position: fixed;
-    top: 200px;
-    left: 550px;
-}
-
-#start-menu {
-    width: 300px;
-    height: 200px;
-    z-index: 4;
-    position: fixed;
-    bottom: 20px;
-    background-color: white;
-}
-
-.menu-btn {
-    width: 100%;
-    text-align: left;
-    font-size: 12px;
-    padding: 5px;
-    background-color: white;
-    border: whitesmoke;
-    cursor: pointer;
-}
-
-.menu-btn:hover {
-    background-color: whitesmoke;
-}
-
-#window-menu {
-    margin-top: 80px;
-    background-color: white;
-}
-
-#addForm {
     z-index: 10;
     position: fixed;
     top: 200px;
