--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -39,3 +39,14 @@
 .description {
     font-size: smaller;
 }
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
+.g-signin-button {
+    /* This is where you control how the button looks. Be creative! */
+    display: inline-block;
+    padding: 4px 8px;
+    border-radius: 3px;
+    background-color: #3c82f7;
+    color: #fff;
+    box-shadow: 0 3px 0 #0f69ff;
+  }
