--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -1,4 +1,7 @@
 
+body {
+    background-color:  #f5619e;
+}
 .bg-color1 {
     background-color:  #37003c;
     border-radius: 5%;
@@ -40,13 +43,15 @@
     font-size: smaller;
 }
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
-
 .g-signin-button {
     /* This is where you control how the button looks. Be creative! */
     display: inline-block;
-    padding: 4px 8px;
+    padding: 4px;
     border-radius: 3px;
-    background-color: #3c82f7;
-    color: #fff;
-    box-shadow: 0 3px 0 #0f69ff;
+    background-color: white;
+    color: black;
+    box-shadow: 0 3px 0 gray;
+  }
+  .logo {
+      height: 40px;
   }
