--- a/client/src/css/landing.css
+++ b/client/src/css/landing.css
@@ -27,11 +27,11 @@
 }
 
 #landing-page-left {
-  width: 65vw;
+  width: 55vw;
 }
 
 #landing-page-right {
-  width: 35vw;
+  width: 45vw;
 }
 
 #landing-title-container {
@@ -64,8 +64,8 @@
 }
 
 #container-auth {
-  width: 90%;
-  /* max-width: 300px; */
+  /* width: 90%; */
+  max-width: 400px;
   min-width: 250px;
   padding: 3rem 2.5rem;
 }
@@ -96,13 +96,14 @@
   display: block;
   height: 3rem;
   width: fit-content;
-  font-size: 2.5rem;
-  line-height: 1rem;
+  font-size: 2.25rem;
+  line-height: 2.25rem;
+  /* white-space: nowrap; */
   font-weight: 700;
   margin: 0 auto;
   margin-bottom: 0.5rem;
   /* border-bottom: 5px solid var(--accent2); */
-  border-bottom: 5px solid var(--accent);
+  /* border-bottom: 5px solid var(--accent); */
 }
 
 #landing-page label {
