--- a/client/src/css/board.css
+++ b/client/src/css/board.css
@@ -85,3 +85,13 @@
   width: 100% !important;
   color: var(--blue);
 }
+
+.delete-btn {
+  font-size: 18px;
+  color: var(--grey-dark);
+  cursor: pointer;
+}
+
+.delete-btn:hover {
+  color: var(--grey-darker);
+}
