add lottie animation

--- a/client/src/css/board.css
+++ b/client/src/css/board.css
@@ -95,3 +95,15 @@
 .delete-btn:hover {
   color: var(--grey-darker);
 }
+
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: var(--grey);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
