--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Archivo:wght@700&family=Montserrat:wght@700;800;900&family=Oswald:wght@500;600;700&family=Rubik:wght@400;500;600;700;900&family=Work+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+
 :root {
   --bg-color: rgb(250, 250, 250);
   --bg-dark: #223346;
@@ -109,6 +111,47 @@ canvas {
 * ─── CSS RESET: END ─────────────────────────────────────────────────────────────
 */
 
+/*
+ * ─── MATERIAL DESIGN ICONS ──────────────────────────────────────────────────────
+ */
+/* Rules for sizing the icon. */
+.material-icons.md-16 {
+  font-size: 16px;
+}
+
+.material-icons.md-18 {
+  font-size: 18px;
+}
+.material-icons.md-24 {
+  font-size: 24px;
+}
+.material-icons.md-36 {
+  font-size: 36px;
+}
+.material-icons.md-48 {
+  font-size: 48px;
+}
+
+/* Rules for using icons as black on a light background. */
+.material-icons.md-dark {
+  color: rgba(0, 0, 0, 0.54);
+}
+.material-icons.md-dark.md-inactive {
+  color: rgba(0, 0, 0, 0.26);
+}
+
+/* Rules for using icons as white on a dark background. */
+.material-icons.md-light {
+  color: rgba(255, 255, 255, 1);
+}
+.material-icons.md-light.md-inactive {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+/*
+ * ─── MATERIAL DESIGN ICONS: END ─────────────────────────────────────────────────
+ */
+
 body {
   display: flex;
   flex-direction: column;
@@ -158,6 +201,31 @@ body {
 
 .fullwidth {
   width: 100%;
+}
+
+.mt-05 {
+  margin-top: 0.5rem;
+}
+.mt-1 {
+  margin-top: 1rem;
+}
+.mr-05 {
+  margin-right: 0.5rem;
+}
+.mr-1 {
+  margin-right: 1rem;
+}
+.mb-05 {
+  margin-bottom: 0.5rem;
+}
+.mb-1 {
+  margin-bottom: 1rem;
+}
+.ml-05 {
+  margin-left: 0.5rem;
+}
+.ml-1 {
+  margin-left: 1rem;
 }
 
 .notification {
