1. modif file client/src/App.vue 2. modif file client/src/components/Category.vue 3. modif file client/src/components/HomePage.vue 4. modif file client/style.css 5. modif file server/middlewares/authentication.js

--- a/client/style.css
+++ b/client/style.css
@@ -42,9 +42,10 @@ body {
   color: white;
 }
 
-.card, 
-.btn, 
-.form-control, 
-.g-signin2 {
+.card, .btn, .form-control, .g-signin2 {
   border-radius: 25px;
+}
+
+.nav-item {
+  border-radius: 15px;
 }
