1.modified:   client/src/App.vue 2.modified:   client/src/components/AddPage.vue 3.modified:   client/src/components/Category.vue 4.modified:   client/src/components/Description.vue 5.modified:   client/src/components/EditPage.vue 6.modified:   client/src/components/HomePage.vue 7.modified:   client/src/components/LoginPage.vue 8.modified:   client/src/components/RegisterPage.vue 9.modified:   client/style.css

--- a/client/style.css
+++ b/client/style.css
@@ -42,10 +42,20 @@ body {
   color: white;
 }
 
+.nav-item1 {
+  background-color: #007bff;
+  color: white;
+}
+
+.nav-item2 {
+  background-color: #ff0000;
+  color: white;
+}
+
 .card, .btn, .form-control, .g-signin2 {
   border-radius: 25px;
 }
 
-.nav-item {
+.nav-item1, .nav-item2 {
   border-radius: 15px;
 }
