--- a/client/style.css
+++ b/client/style.css
@@ -6,6 +6,9 @@
   justify-content: space-evenly;
   align-items: flex-start;
   margin-top: 50px;
+  background-image: url('./src//assets/macos-high-sierra-default-wallpaper-fall-mountain-scene-1.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .navbar {
@@ -18,9 +21,13 @@
 
 .item {
   color: #ffffff;
-  padding: 1.5rem;
+  padding: 0.5rem;
   margin: 1rem;
-  border-radius: 10px;
+  border-radius: 10px;  
+}
+
+.item:last-child{
+  margin-bottom: 0.5rem;
 }
 
 .login-box {
@@ -30,28 +37,42 @@
 }
 
 .planning {
-  background-color: #bbbfca;
+  background-color: #f4f4f2;
   color: black;
+  background-color: rgba(255, 255, 255, .50);  
+  backdrop-filter: blur(5px);
 }
 
-.inprogress {
-  background-color: #e8e8e8;
+.shadow {
+  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
+}
+
+.todo {
+  background-color: #f4f4f2;
   color: black;
+  background-color: rgba(255, 255, 255, .50);  
+  backdrop-filter: blur(5px);
+}
+
+.doing {
+  background-color: #f4f4f2;
+  color: black;
+  background-color: rgba(255, 255, 255, .50);  
+  backdrop-filter: blur(70px);
 }
 
 .done {
   background-color: #f4f4f2;
   color: black;
+  background-color: rgba(255, 255, 255, .50);  
+  backdrop-filter: blur(30px);
 }
 
-.comment {
-  background-color: #9ad3bc;
+.box-transparan {
+  background-color: #f4f4f2;
   color: black;
-}
-
-.color-biru {
-  background-color: #bbbfca;
-  color: black;
+  background-color: rgba(255, 255, 255, .70);  
+  backdrop-filter: blur(30px);
 }
 
 .body-card {
@@ -85,6 +106,7 @@
 
 .login-icon {
   width: 100%;
+  min-height: 20px;
 }
 
 .google-icon {
@@ -94,5 +116,32 @@
 .or-icon {
   align-self: center;
   padding: 5px;
+}
 
+.card-title {
+  font-size: 12pt;
+}
+
+.card-subtitle {
+  font-size: 10pt;
+}
+
+.card-text {
+  font-size: 12pt;
+}
+
+.card {
+  margin-top: 0.4rem;
+}
+
+.item h4 {
+  margin-left: 5px;
+}
+.navbar-home {
+  color: black;
+  text-decoration: none;
+}
+
+.navbar-home:hover {
+  cursor: pointer;
 }
